// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update Row With Status should render the UI correctly OFF 1`] = `
<body>
  <div>
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row"
      >
        <div
          class="flex flex-col"
        >
          <div
            class="on-off justify-center items-center body-2 onOff-desktop"
            style="min-width: 40px; height: 24px; background-color: rgb(242, 242, 242); color: rgb(51, 51, 51); border-color: gray; border-radius: 5px; font-weight: 500;"
          >
            <div>
              <span
                class="off-dot"
              >
                 
              </span>
            </div>
            OFF
          </div>
        </div>
        <span
          style="display: block; width: 16px; min-width: 16px; height: 1px; min-height: 1px;"
        />
        <div
          class="flex flex-col"
        >
          <div
            class="on-off justify-center items-center body-2 onOff-mobile"
            style="min-width: 40px; height: 24px; background-color: rgb(242, 242, 242); color: rgb(51, 51, 51); border-color: gray; border-radius: 5px; font-weight: 500;"
          >
            <div>
              <span
                class="off-dot"
              >
                 
              </span>
            </div>
            OFF
          </div>
          <p
            class="body-1 underline underline-offset-4 decoration-dashed app-underline font-bold"
            style="display: block; max-width: 100%;"
          >
            Authenticator App
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 mb-4"
            style="display: block; max-width: 100%;"
          >
            Use your authenticator app's security code
          </p>
          <button
            class="flex flex-row link-container font-bold primary-color pl-0"
            style="max-width: max-content; height: auto; display: flex;"
            type="button"
          >
            <p
              class="link !no-underline"
              style="display: flex;"
            >
              Remove Method
            </p>
            <p
              class="ml-1"
              style="display: flex;"
            >
              <img
                alt="link"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </p>
          </button>
        </div>
      </div>
      <div
        class="mt-8"
        style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
      />
    </div>
  </div>
</body>
`;

exports[`Update Row With Status should render the UI with ON 1`] = `
<body>
  <div>
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row"
      >
        <div
          class="flex flex-col"
        >
          <div
            class="on-off justify-center items-center body-2 onOff-desktop"
            style="min-width: 40px; height: 24px; background-color: rgb(226, 240, 211); color: rgb(80, 131, 22); border-radius: 5px; font-weight: 500;"
          >
            <div>
              <span
                class="on-dot"
              >
                 
              </span>
            </div>
            ON
          </div>
        </div>
        <span
          style="display: block; width: 16px; min-width: 16px; height: 1px; min-height: 1px;"
        />
        <div
          class="flex flex-col"
        >
          <div
            class="on-off justify-center items-center body-2 onOff-mobile"
            style="min-width: 40px; height: 24px; background-color: rgb(226, 240, 211); color: rgb(80, 131, 22); border-radius: 5px; font-weight: 500;"
          >
            <div>
              <span
                class="on-dot"
              >
                 
              </span>
            </div>
            ON
          </div>
          <p
            class="body-1 underline underline-offset-4 decoration-dashed app-underline font-bold"
            style="display: block; max-width: 100%;"
          >
            Authenticator App
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 mb-4"
            style="display: block; max-width: 100%;"
          >
            Use your authenticator app's security code
          </p>
          <button
            class="flex flex-row link-container font-bold primary-color pl-0"
            style="max-width: max-content; height: auto; display: flex;"
            type="button"
          >
            <p
              class="link !no-underline"
              style="display: flex;"
            >
              Remove Method
            </p>
            <p
              class="ml-1"
              style="display: flex;"
            >
              <img
                alt="link"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </p>
          </button>
        </div>
      </div>
      <div
        class="mt-8"
        style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
      />
    </div>
  </div>
</body>
`;
